--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
+    "@types/react-redux": "7.1.15",
     "@types/react-dom": "^17.0.11",
+    "axios": "0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.2",
     "react-scripts": "5.0.0",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
